WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270008
[Navigation] Fix navigation-methods/return-value/navigate-push-initial-about-blank.html
https://bugs.webkit.org/show_bug.cgi?id=270008
Summary
[Navigation] Fix navigation-methods/return-value/navigate-push-initial-about-...
Rob Buis
Reported
2024-02-23 14:14:31 PST
Fix navigation-methods/return-value/navigate-push-initial-about-blank.html.
Attachments
Add attachment
proposed patch, testcase, etc.
Rob Buis
Comment 1
2024-02-23 14:18:32 PST
Pull request:
https://github.com/WebKit/WebKit/pull/25032
Radar WebKit Bug Importer
Comment 2
2024-03-01 14:15:20 PST
<
rdar://problem/123920350
>
EWS
Comment 3
2024-03-15 16:37:17 PDT
Committed
276213@main
(a6a4129a5ef3): <
https://commits.webkit.org/276213@main
> Reviewed commits have been landed. Closing PR #25032 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug