[Navigation] Fix navigation-methods/return-value/navigate-push-initial-about-blank.html https://bugs.webkit.org/show_bug.cgi?id=270008

Reviewed by Darin Adler.

The navigate implementation needs to check whether the history option is "replace" and the document is about:blank and throw an exception if not [1].

To fully fix this test, adjust DeferredPromise::reject so it can reuse a JS exception object, since the
test framework will check committed/finished promises return the same exception object.

[1] https://html.spec.whatwg.org/multipage/nav-history-apis.html#dom-navigation-navigate (Step 4)

* LayoutTests/TestExpectations:
* LayoutTests/imported/w3c/web-platform-tests/navigation-api/navigation-methods/return-value/back-forward-out-of-bounds-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/navigation-api/navigation-methods/return-value/navigate-push-initial-about-blank-expected.txt:
* Source/WebCore/bindings/js/JSDOMPromiseDeferred.cpp:
(WebCore::DeferredPromise::reject):
* Source/WebCore/bindings/js/JSDOMPromiseDeferred.h:
(WebCore::DeferredPromise::reject):
* Source/WebCore/page/Navigation.cpp:
(WebCore::createErrorResult):
(WebCore::Navigation::navigate):

Canonical link: https://commits.webkit.org/276213@main